[package]
name = "http-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Reusable unary HTTP transport seam (request/response, no streaming). Mirror of repl-net's transport: a SimulatedHttpNetwork in-memory fabric (dst-keyed pause/cutoff/error faults + transit delay) for paused-clock tests, a RecordingHttpNetwork decorator, and a feature-gated RealHttpNetwork (hyper + pooled reqwest) for production. Bodies are opaque bytes — JSON/serde lives in the consumer."

[features]
# The real (hyper + pooled reqwest) transport. Off by default so leaf test
# crates never compile the HTTP-framework tree; the runner turns it on.
real = []

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
# Recording timestamps come from the injected wall-clock seam.
sip-clock = { path = "../sip-clock" }

[dev-dependencies]
tokio = { workspace = true }
sip-clock = { path = "../sip-clock", features = ["testkit"] }
