[package]
name = "loadgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "SIP load generator that reuses the functional scenario-harness choreography (basic call, re-INVITE, REFER, OPTIONS keepalive) as a partial SIPp substitute: managed CPS, bounded memory, live Prometheus /metrics + on-disk callflow report with bounded per-result samples. Drives the real cluster from the host; not production code."

[lints]
workspace = true

[dependencies]
# The Send agent factory + fallible try_* choreography + best-effort teardown
# helpers live here (the load-bearing reuse of the functional harness).
scenario-harness = { path = "../scenario-harness" }
# The shared axis data model (loadgen⇄e2e fusion): the CLI loads an authored
# `EndpointConfig` (`--endpoint-config`), whose optional `egress` field carries
# the run's egress policy (the environment axis).
e2e-model = { path = "../e2e-model" }
sip-message = { path = "../sip-message" }
tokio = { workspace = true }
# catch_unwind over a scenario future → a panic becomes a counted failure, never
# aborts the worker.
futures = "0.3"
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
# Per-call random correlation token (UUIDv4) threaded through the SUT.
uuid = { version = "1", features = ["v4"] }
# Correlation-token extraction from templated header values (first capture
# group = the token); see `mux::Correlation::header_templated`.
regex = { workspace = true }
# The mux is a SignalingNetwork; recording layers on top via AgentBinder.
sip-net = { path = "../sip-net" }
# One process-wide monotonic-anchored Clock (created once at startup) stamps every
# call recording, chaos marker, and packet arrival — so loadgen never reads raw
# SystemTime on its own timeline (the marker and frame axes stay in lockstep).
sip-clock = { path = "../sip-clock" }

[dev-dependencies]
# Fake-network smoke test: an in-process B2buaCore SUT on a shared simulated
# network, driven by the load driver, asserting no call is leaked after teardown.
b2bua-harness = { path = "../b2bua-harness" }
# `B2buaConfig` field tunes (exhaust the CPS bucket) for the overload-shed test.
b2bua-sdk = { path = "../b2bua-sdk" }
scenario-harness = { path = "../scenario-harness" }
sip-clock = { path = "../sip-clock", features = ["testkit"] }
# `TransportKind::Fake` for `Harness::with_network_and_clock` (shared-net SUT).
layer-harness = { path = "../layer-harness" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
