[package]
name = "media-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Test-only media harness — deterministic reference clips, the spectral (MFCC) audio classifier that proves media reached the right peer, and the negotiate_call offer/answer helper. Rust port of sipjsserver src/test-harness/media/ + tests/media support. Carries no production code (ADR-0004)."

[dependencies]
media = { path = "../media" }
sip-net = { path = "../sip-net" }
rustfft = { workspace = true }
# test-util is needed at lib-build time for the `testkit::advance_media` helper.
# media-harness is itself test-only (ADR-0004), so this is not prod surface.
tokio = { workspace = true, features = ["test-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
