[package]
name = "media"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Media layer — RTP/RTCP framing, G.711 codecs, SDP offer/answer negotiation, and a paced media transport that binds on SignalingNetwork. Rust port of sipjsserver src/media/. Transport-agnostic over sip-net (simulated fabric in tests, real UDP in prod); ships a hand-rolled RFC 3550 framing plus a webrtc-rs witness that cross-checks it."

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sip-net = { path = "../sip-net" }
sip-clock = { path = "../sip-clock" }
rtp = { workspace = true }
rtcp = { workspace = true }
bytes = { workspace = true }
webrtc-util = { workspace = true }

[dev-dependencies]
# `test-util` adds the paused-clock lever (tokio::time::pause/advance) — the
# test analogue of Effect's TestClock, used by the play→record slices.
tokio = { workspace = true, features = ["test-util"] }
