[package]
name = "scenario-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Cross-layer scenario test harness + report renderers — Rust port of sipjsserver src/test-harness/framework. Drives named agents (alice/bob) over the recording-wrapped simulated SignalingNetwork and projects the recording into SVG / global.txt / per-endpoint views. TEST-ONLY."

[dependencies]
tokio = { workspace = true }
sip-message = { path = "../sip-message" }
sip-net = { path = "../sip-net" }
layer-harness = { path = "../layer-harness" }
sip-clock = { path = "../sip-clock", features = ["testkit"] }

[dev-dependencies]
tokio = { workspace = true }
